package it.polimi.ingsw.client.controller;

public interface CommandInterface {

    void execute();

}
