package it.polimi.ingsw.client.controller;

public enum PossibleClientAction {
    SELECT_WORKER,
    POWER_BUTTON,
    MOVE,
    BUILD,
}
